force-app/main/default/objects/Prodotto__c/Prodotto__c.object-meta.xml
<CustomObject>
    <label>Prodotto</label>
    <nameField>
        <displayFormat>P-{000}</displayFormat>
        <label>Numero Prodotto</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prodotti</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>