force-app/main/default/objects/Prodotto__c/fields/Disponibilita__c.field-meta.xml
<CustomField>
    <fullName>Disponibilita__c</fullName>
    <label>Disponibilita</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>