force-app/main/default/objects/Prodotto__c/fields/Prezzo__c.field-meta.xml
<CustomField>
    <fullName>Prezzo__c</fullName>
    <label>Prezzo</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>